--- a/PassionFruitBasic/index.html
+++ b/PassionFruitBasic/index.html
@@ -209,7 +209,7 @@ background:linear-gradient(0deg, #FFDB4D 1%, #66523D 99%);
 
             <nav id="menu"><!-- Defining the navigation menu -->
                 <ul>
-                    <li><a href="home.html" title="Home" alt="Home">Home</a></li>
+                    <li><a href="#" title="Home" alt="Home">Home</a></li>
                     <li><a href="#" title="About Us" alt="About Us">About Us</a></li>
                     <li><a href="#" title="Products" alt="Products">Products</a></li>
                     <li><a href="#" title="Services" alt="Services">Services</a></li>
